--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_menu">menu</string>
+    <string name="title_activity_menu">Menu</string>
     <string name="bienvenido">Bienvenido</string>
     <string name="Usuario">Usuario</string>
 
