--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_menu">Menu</string>
-    <string name="bienvenido">Bienvenido</string>
+    <string name="hola">Bienvenido</string>
     <string name="Usuario">Usuario</string>
 
     <!-- TODO: Remove or change this placeholder text -->
